# bachelors-thesis

./: .gitignore  README.md
corba_omniorb_server_cpp/: .gitignore  CorbaInterface.idl  Makefile  README.md  main.cpp
doc/: .gitignore  aghdpl.cls  bibliografia.bib  implementacja.tex  podsumowanie.tex  praca.tex  prezentacja_wynikow.tex  rozdzial3.tex  wprowadzenie.tex  wstep.tex
doc/img/: CORBA_architecture.xml  TCP_handshake.xml  class_diagram.xml  files_impl_diagram.xml  rest_impl_diagram.xml  tcp_diagram.xml
doc/obrona/: praca_inżynierska_prezentacja_obrona.ppt
file_watcher_cpp/: CMakeLists.txt  main.cpp
rest_server_cpp/: CMakeLists.txt  how_to_build.txt
rest_server_cpp/.ngrest/: services
rest_server_cpp/rest_server_cpp/: CMakeLists.txt
rest_server_cpp/rest_server_cpp/src/: rest_server_cpp.hpp
rest_server_pistache_cpp/: CMakeLists.txt  main.cpp  readme.md
results_converter/: .gitignore  build.gradle  settings.gradle
tcp_server_cpp/: CMakeLists.txt  main.cpp
transfer_tester/: pom.xml  readme.md
transfer_tester/latest_results/csv/: CORBA_1024_1024.csv  CORBA_1024_16.csv  CORBA_1048576_1048576.csv  CORBA_1048576_16.csv  CORBA_16_1024.csv  CORBA_16_1048576.csv  CORBA_16_16.csv  CORBA_16_262144.csv  CORBA_16_8192.csv  CORBA_262144_16.csv  CORBA_262144_262144.csv  CORBA_8192_16.csv  CORBA_8192_8192.csv  FILE_1024_1024.csv  FILE_1024_16.csv  FILE_1048576_1048576.csv  FILE_1048576_16.csv  FILE_134217728_134217728.csv  FILE_16_1024.csv  FILE_16_1048576.csv  FILE_16_16.csv  FILE_16_262144.csv  FILE_16_8192.csv  FILE_262144_16.csv  FILE_262144_262144.csv  (+57 more)
(+72 files in other folders)
